# simple-engine

./: .gitmodules  CMakeLists.txt
include/: SE.h  SE_Color.h  SE_Core.h  SE_Graphics.h  SE_Options.h  SE_SDLGraphics.cpp  SE_SDLGraphics.h  SE_SMTGraphics.h  SE_Sprite.h  SE_counter.h  SE_modifier.h  SE_music.h  SE_options.h  SE_soundEffect.h  SE_sprite.h
include/GBA/: SE_gbaBackend.h  SE_gbaGraphics.h  SE_gbaSound.h
include/SDL/: SE_SDLBackend.h  SE_SDLGraphics.h  SE_SDLUserInterface.h  SE_sdlBackend.h  SE_sdlGraphics.h  SE_sdlInput.h  SE_sdlSound.h
include/SE/: SE.h  SE_color.h  SE_counter.h  SE_counterService.h  SE_inputKey.h  SE_label.h  SE_modifier.h  SE_rectangle.h  SE_sprite.h  SE_tileMap.h  SE_transform.h
include/SMT/: SE_SMTGraphics.h  SE_smtBackend.h  SE_smtInput.h
source/: SE.cpp  SE_Core.cpp  SE_EngineContext.h  SE_Graphics.cpp  SE_GraphicsEngine.cpp  SE_SDLBackend.cpp  SE_Sprite.cpp  SE_counter.cpp  SE_counterService.cpp
source/GBA/: SE_gbaBackend.cpp  SE_gbaGraphics.cpp  SE_gbaSound.cpp
source/SDL/: SE_SDLBackend.cpp  SE_SDLGraphics.cpp  SE_SDLUserInterface.cpp  SE_sdlBackend.cpp  SE_sdlGraphics.cpp  SE_sdlInput.cpp  SE_sdlSound.cpp
source/SE/: SE.cpp  SE_counter.cpp  SE_counterService.cpp  SE_tileMap.cpp  SE_transform.cpp
source/SMT/: SE_smtBackend.cpp  SE_smtGraphics.cpp  SE_smtInput.cpp  SE_smtSound.cpp
source/internal/: SE_GraphicsEngine.cpp  SE_GraphicsEngine.h
